# lynix_api_v3

./: Cargo.toml  Dockerfile
src/: db.rs  errors.rs  main.rs
src/middleware/: auth.rs
src/models/: article.rs  event.rs  mod.rs  sticker.rs  user.rs
src/routes/: auth.rs  blog.rs  events.rs  mod.rs  stickers.rs
src/routes/fox_net/: mod.rs
