[package]
name = "lynix_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
derive_more = "0.99.17"
mongodb = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
env_logger = "0.9.0"
dotenvy = "0"
bson = "2.6.1"
base64 = "0.21.0"
chrono = "0.4.24"
pbkdf2 = { version = "0.12.1", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }

[[bin]]
name = "lynix_api"
path = "src/main.rs"
